--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,7 +16,13 @@
 	"postCreateCommand": "chmod +x ./installer_script.sh && ./installer_script.sh",
 
 	// Configure tool-specific properties.
-	"customizations": {}
+	"customizations": {},
+		
+	"hostRequirements": {
+	   "cpus": 4,
+	   "memory": "8gb",
+	   "storage": "32gb"
+	}
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
