--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ langchain
 openai==0.27.8
 gunicorn==19.7.1
 pymongo==4.4.0
-`dnspython==2.3.0
+dnspython==2.3.0
 huggingface_hub
 beautifulsoup4==4.11.2
 lxml==4.9.2
